; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/khronos/wf/extr_wfc_client_server_api.c_wfc_server_commit_scene.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/khronos/wf/extr_wfc_client_server_api.c_wfc_server_commit_scene.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_12__ = type { i64, %struct.TYPE_9__*, i32 }
%struct.TYPE_9__ = type { i32 }
%struct.TYPE_13__ = type { i64, %struct.TYPE_14__, i32, %struct.TYPE_11__, %struct.TYPE_10__, i32 }
%struct.TYPE_14__ = type { i32 }
%struct.TYPE_11__ = type { i8* }
%struct.TYPE_10__ = type { i32* }

@VCOS_SUCCESS = common dso_local global i64 0, align 8
@VCOS_ENOSYS = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [50 x i8] c"%s: context 0x%x commit %u elements %u flags 0x%x\00", align 1
@VCOS_FUNCTION = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [28 x i8] c"%s: element[%u] stream 0x%x\00", align 1
@WFC_IPC_MSG_COMMIT_SCENE = common dso_local global i32 0, align 4
@WFC_SERVER_COMMIT_WAIT = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @wfc_server_commit_scene(i32 %0, %struct.TYPE_12__* %1, i64 %2, i32* %3, i8* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_12__*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca %struct.TYPE_13__, align 8
  %12 = alloca i64, align 8
  %13 = alloca i64, align 8
  %14 = alloca i64, align 8
  %15 = alloca i64, align 8
  store i32 %0, i32* %6, align 4
  store %struct.TYPE_12__* %1, %struct.TYPE_12__** %7, align 8
  store i64 %2, i64* %8, align 8
  store i32* %3, i32** %9, align 8
  store i8* %4, i8** %10, align 8
  %16 = load i64, i64* @VCOS_SUCCESS, align 8
  store i64 %16, i64* %12, align 8
  %17 = load i64, i64* @VCOS_ENOSYS, align 8
  store i64 %17, i64* %13, align 8
  store i64 8, i64* %14, align 8
  %18 = load i32, i32* @VCOS_FUNCTION, align 4
  %19 = load i32, i32* %6, align 4
  %20 = sext i32 %19 to i64
  %21 = load %struct.TYPE_12__*, %struct.TYPE_12__** %7, align 8
  %22 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %21, i32 0, i32 2
  %23 = load i32, i32* %22, align 8
  %24 = load %struct.TYPE_12__*, %struct.TYPE_12__** %7, align 8
  %25 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = load i64, i64* %8, align 8
  %28 = call i32 (i8*, i32, i64, i32, ...) @vcos_log_trace(i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str, i64 0, i64 0), i32 %18, i64 %20, i32 %23, i64 %26, i64 %27)
  store i64 0, i64* %15, align 8
  br label %29

29:                                               ; preds = %46, %5
  %30 = load i64, i64* %15, align 8
  %31 = load %struct.TYPE_12__*, %struct.TYPE_12__** %7, align 8
  %32 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = icmp ult i64 %30, %33
  br i1 %34, label %35, label %49

35:                                               ; preds = %29
  %36 = load i32, i32* @VCOS_FUNCTION, align 4
  %37 = load i64, i64* %15, align 8
  %38 = load %struct.TYPE_12__*, %struct.TYPE_12__** %7, align 8
  %39 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %38, i32 0, i32 1
  %40 = load %struct.TYPE_9__*, %struct.TYPE_9__** %39, align 8
  %41 = load i64, i64* %15, align 8
  %42 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %40, i64 %41
  %43 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %42, i32 0, i32 0
  %44 = load i32, i32* %43, align 4
  %45 = call i32 (i8*, i32, i64, i32, ...) @vcos_log_trace(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.1, i64 0, i64 0), i32 %36, i64 %37, i32 %44)
  br label %46

46:                                               ; preds = %35
  %47 = load i64, i64* %15, align 8
  %48 = add i64 %47, 1
  store i64 %48, i64* %15, align 8
  br label %29

49:                                               ; preds = %29
  %50 = load i32, i32* @WFC_IPC_MSG_COMMIT_SCENE, align 4
  %51 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %11, i32 0, i32 1
  %52 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %51, i32 0, i32 0
  store i32 %50, i32* %52, align 8
  %53 = load i32, i32* %6, align 4
  %54 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %11, i32 0, i32 5
  store i32 %53, i32* %54, align 8
  %55 = load i64, i64* %8, align 8
  %56 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %11, i32 0, i32 0
  store i64 %55, i64* %56, align 8
  %57 = load i32*, i32** %9, align 8
  %58 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %11, i32 0, i32 4
  %59 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %58, i32 0, i32 0
  store i32* %57, i32** %59, align 8
  %60 = load i8*, i8** %10, align 8
  %61 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %11, i32 0, i32 3
  %62 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %61, i32 0, i32 0
  store i8* %60, i8** %62, align 8
  %63 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %11, i32 0, i32 2
  %64 = load %struct.TYPE_12__*, %struct.TYPE_12__** %7, align 8
  %65 = call i32 @memcpy(i32* %63, %struct.TYPE_12__* %64, i32 24)
  %66 = load i64, i64* %8, align 8
  %67 = load i64, i64* @WFC_SERVER_COMMIT_WAIT, align 8
  %68 = and i64 %66, %67
  %69 = icmp ne i64 %68, 0
  br i1 %69, label %70, label %79

70:                                               ; preds = %49
  %71 = load i32*, i32** %9, align 8
  %72 = icmp ne i32* %71, null
  %73 = zext i1 %72 to i32
  %74 = call i32 @vcos_assert(i32 %73)
  %75 = load i8*, i8** %10, align 8
  %76 = icmp ne i8* %75, null
  %77 = zext i1 %76 to i32
  %78 = call i32 @vcos_assert(i32 %77)
  br label %88

79:                                               ; preds = %49
  %80 = load i32*, i32** %9, align 8
  %81 = icmp eq i32* %80, null
  %82 = zext i1 %81 to i32
  %83 = call i32 @vcos_assert(i32 %82)
  %84 = load i8*, i8** %10, align 8
  %85 = icmp eq i8* %84, null
  %86 = zext i1 %85 to i32
  %87 = call i32 @vcos_assert(i32 %86)
  br label %88

88:                                               ; preds = %79, %70
  %89 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %11, i32 0, i32 1
  %90 = call i64 @wfc_client_ipc_sendwait(%struct.TYPE_14__* %89, i32 40, i64* %13, i64* %14)
  store i64 %90, i64* %12, align 8
  %91 = load i64, i64* %12, align 8
  %92 = load i64, i64* @VCOS_SUCCESS, align 8
  %93 = icmp ne i64 %91, %92
  br i1 %93, label %94, label %96

94:                                               ; preds = %88
  %95 = load i64, i64* %12, align 8
  store i64 %95, i64* %13, align 8
  br label %96

96:                                               ; preds = %94, %88
  %97 = load i64, i64* %13, align 8
  ret i64 %97
}

declare dso_local i32 @vcos_log_trace(i8*, i32, i64, i32, ...) #1

declare dso_local i32 @memcpy(i32*, %struct.TYPE_12__*, i32) #1

declare dso_local i32 @vcos_assert(i32) #1

declare dso_local i64 @wfc_client_ipc_sendwait(%struct.TYPE_14__*, i32, i64*, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
